# prototype

./: .gitignore  Cargo.toml  INSTRUCTIONS.md  Makefile  README.md  clear.sh  invoke.sh  pidstat.output  pidstat.sh  pyproject.toml  rrd.journal.1746632466.953086  spy.service  timescaledb.md
src/: bench.py  forward.py  iterate.py  main.rs  replay.rs  replay_clickhouse.rs  replay_rrd.rs  send_command.py
src/prototype.egg-info/: PKG-INFO  SOURCES.txt
tests/: forward_test.py
