[package]
name = "prototype"
version = "1.0.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5.38", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["full", "tracing"] }
tokio-util = "0.7.15"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }

[[bin]]
name = "spy"
path = "src/main.rs"
