[package]
name = "prototype"
version = "1.0.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
base64 = "0.22.1"
chrono = "0.4.41"
clap = { version = "4.5.38", features = ["derive"] }
clickhouse = { version = "0.13.3", features = ["chrono"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.6", features = ["chrono", "postgres", "runtime-tokio"] }
tokio = { version = "1.45.0", features = ["full", "tracing"] }
tokio-util = "0.7.15"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }

[dev-dependencies]
clickhouse = { version = "0.13.3", features = ["test-util"] }

[[bin]]
name = "spy"
path = "src/main.rs"

[[bin]]
name = "replay"
path = "src/replay.rs"

[[bin]]
name = "replay_rrd"
path = "src/replay_rrd.rs"

[[bin]]
name = "replay_clickhouse"
path = "src/replay_clickhouse.rs"
